# pic-api-drf

./: .gitignore  README.md  manage.py  package-lock.json  package.json  pyproject.toml
app_company/: admin.py  apps.py  models.py
app_company/migrations/: 0001_initial.py
app_company/tests/: factories.py  test_models.py
poc_api_drf/: asgi.py  settings.py  urls.py  wsgi.py
