[tool.poetry]
name = "poc-api-drf"
version = "0.1.0"
description = "POC to practice poetry, django, drf and unit testing"
authors = ["renato <felicio95.jr@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "poc_api_drf"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
