[tool.poetry]
name = "poc-api-drf"
version = "0.1.0"
description = "POC to practice poetry, django, drf and unit testing"
authors = ["renato <felicio95.jr@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "poc_api_drf"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0"
djangorestframework = "^3.14.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
black = "^23.12.0"
ipython = "^8.18.1"
factory-boy = "^3.3.0"
faker = "^21.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
